manager-template/1-basic/kubernetes/_3_db.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-db-svc
spec:
  selector:
    pod: server-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: server-db
  template:
    metadata:
      labels:
        pod: server-db
    spec:
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: mongo-pvc
      containers:
        - name: io-manager-db-container
          image: mongo
          args: ['--dbpath', '/data/db']
          imagePullPolicy: Always
          resources:
            limits:
              memory: '512Mi'
            requests:
              memory: '256Mi'
          volumeMounts:
            - name: db-volume
              mountPath: '/data/db'
