manager-template/1-basic/kubernetes/_5_admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-ui-svc
spec:
  selector:
    pod: admin-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-ui-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: admin-ui
  template:
    metadata:
      labels:
        pod: admin-ui
    spec:
      containers:
        - name: admin-ui-container
          image: ghcr.io/interopio/manager-admin-ui:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
            requests:
              memory: "64Mi"
