manager-template/1-basic/kubernetes/_6_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: io-manager-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/limit-connections: '10000'
spec:
  rules:
    - http:
        paths:
          - path: /server(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: server-svc
                port:
                  number: 4356
          - path: /admin-ui(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: admin-ui-svc
                port:
                  number: 80
